--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
         toolchain: nightly
         override: true
     - name: Install dependencies
-      run: sudo apt-get install -y libpango1.0-dev libgraphene1.0-dev
+      run: sudo apt-get install -y libpango1.0-dev graphene
     - name: Build
       run: cargo build
     - name: Run tests
