--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
         toolchain: nightly
         override: true
     - name: Install dependencies
-      run: sudo apt-get install -y libpango1.0-dev libgraphene-1.0-0 libgraphene-1.0-dev libgtk-4-1 libgtk-4-dev
+      run: sudo apt-get install -y libpango1.0-dev libgraphene-1.0-0 libgraphene-1.0-dev libgtk-4-1 libgtk-4-bin libgtk-4-common libgtk-4-dev
     - name: Build
       run: cargo build
     - name: Run tests
