--- a/python_indrajala/sub_tasks/wetter_uni_muenchen/ws_indra.toml
+++ b/python_indrajala/sub_tasks/wetter_uni_muenchen/ws_indra.toml
@@ -1,3 +1,3 @@
 uri = "wss://localhost:8082"
 ssl = true
-ca_authority = "/Users/dsc/Nextcloud/Security/Certs/ca-root.pem"
+ca_authority = "{{data_directory}}/certs/ca-root.pem"
