--- a/rust_indrajala/plotter/Cargo.toml
+++ b/rust_indrajala/plotter/Cargo.toml
@@ -14,7 +14,7 @@ partial-min-max = "*"
 tungstenite = "*"
 serde_json = "*"
 indra_event = { path = "../../rust_indrajala/indra_event" }
-gtk = { version = "*", package = "gtk4" }
-glib = "*"
+gtk = { version = "0.6.6", package = "gtk4" }
+glib = "0.17.10"
 plotters = "*"                                              #  { git = "https://github.com/plotters-rs/plotters" }
-plotters-cairo = "*"                                        # { git = "https://github.com/plotters-rs/plotters-cairo" }
+plotters-cairo = "*"                                   # { git = "https://github.com/plotters-rs/plotters-cairo" }
