--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -1,12 +1,26 @@
 [indrajala]
 logdir = "log"
 max_loglevel_logfile = "debug"
-loglevel = "debug"
-modules = ["signal_server"]
-
+modules = [ "signal_server", "pingpong"]
 
 [signal_server]
 active = true
-name = "signal_server"
+name = "signal_server.1"
 loglevel = "debug"
+signal_port = 8001
 kill_daemon = false
+
+[[pingpong]]
+active = true
+name = "pingpong.1"
+loglevel = "debug"
+
+[[pingpong]]
+active = true
+name = "pingpong.2"
+loglevel = "debug"
+
+[[pingpong]]
+active = true
+name = "pingpong.3"
+loglevel = "debug"
