--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -1,14 +1,7 @@
 [indrajala]
 logdir = "log"
 max_loglevel_logfile = "debug"
-modules = [ "signal_server", "pingpong"]
-
-[signal_server]
-active = true
-name = "signal_server.1"
-loglevel = "debug"
-signal_port = 8001
-kill_daemon = false
+modules = ["pingpong"]
 
 [[pingpong]]
 active = true
