--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -1,7 +1,7 @@
 [indrajala]
 logdir = "log"
 max_loglevel_logfile = "debug"
-modules = ["pingpong"]
+modules = ["pingpong", "indra_mqtt"]
 
 [[pingpong]]
 active = true
@@ -17,3 +17,12 @@ loglevel = "debug"
 active = true
 name = "pingpong.3"
 loglevel = "debug"
+
+[[indra_mqtt]]
+active = true
+name = "indra_mqtt.1"
+loglevel = "debug"
+mqtt_server = "my_mqtt_server"
+mqtt_port = 1883
+mqtt_keepalive = 60
+mqtt_subscriptions = ["#"]
