--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -34,7 +34,9 @@ subscriptions = ["mqtt/#"]
 mqtt_server = "my-mqtt-server"
 mqtt_port = 1883
 mqtt_keepalive = 60
-mqtt_subscriptions = ["something/#"]
+raw_mqtt_subscriptions = ["omu/#"]
+inbound_parsers = [["omu/#", "muwerk"], ["hastates/#", "ha"]]
+outbound_parsers = []
 
 [[indra_db]]
 active = true
