Make float epsilon a config, allow kv tree-delete

--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -42,6 +42,7 @@ outbound_parsers = []
 active = true
 name = "indra_db.1"
 loglevel = "debug"
+epsilon = 0.000001
 subscriptions = ["mqtt/#"]
 database = "{{data_directory}}/db/indrajala.db"
 commit_delay_sec = 0.0
