--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -43,7 +43,7 @@ active = true
 name = "indra_db.1"
 loglevel = "debug"
 epsilon = 0.000001
-subscriptions = ["mqtt/#"]
+subscriptions = []
 database = "{{data_directory}}/db/indrajala.db"
 commit_delay_sec = 0.0
 
