--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -64,3 +64,14 @@ active = true
 name = "indra_dispatch.1"
 loglevel = "debug"
 subscriptions = []
+annotate = ["sentiment"]
+
+[[indra_ai]]
+active = true
+name = "indra_ai.1"
+loglevel = "debug"
+subscriptions = []
+application = "sentiment"
+engine = "huggingface/pipeline/sentiment-analysis"
+model = "distilbert-base-uncased-finetuned-sst-2-english"
+revision = "af0f99b"
