--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -75,3 +75,13 @@ application = "sentiment"
 engine = "huggingface/pipeline/sentiment-analysis"
 model = "distilbert-base-uncased-finetuned-sst-2-english"
 revision = "af0f99b"
+
+[[indra_ai]]
+active = true
+name = "indra_ai.2"
+loglevel = "debug"
+subscriptions = []
+application = "translation"
+engine = "huggingface/accelerate/sentencepiece"
+# model = "Helsinki-NLP/opus-mt-en-de"
+model = "jbochi/madlad400-3b-mt"
