--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -96,3 +96,4 @@ zeromq_port = 8092
 # zeromq_executable = "some path to module"
 loglevel = "debug"
 subscriptions = ["zero_test/#"]
+ping_frequency_hz = 1
