--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -96,4 +96,5 @@ zeromq_port = 8092
 # zeromq_executable = "some path to module"
 loglevel = "debug"
 subscriptions = ["zero_test/#"]
+# Max for M2 cpu is around 5000 Hz message input via ZMQ
 ping_frequency_hz = 1
