Prep client lib pub

--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -2,7 +2,7 @@
 logdir = "log"
 max_loglevel_logfile = "debug"
 loglevel = "info"
-modules = ["pingpong", "indra_mqtt", "indra_db", "async_http", "indra_dispatch", "indra_ai"]
+modules = ["pingpong", "indra_mqtt", "indra_db", "async_http", "indra_dispatch", "indra_ai", "zero_test"]
 data_directory = "~/.config/indrajala"
 zeromq_port = 8091
 
