--- a/indraserver/pyproject.toml
+++ b/indraserver/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "indraserver"
-version = "0.0.1"
+name = "indrajala"
+version = "0.0.2"
 authors = [{ name = "Dominik Schlösser", email = "dominik.schloesser@gmail.com" }]
 description = "Indrajala server system"
 readme = "README.md"
@@ -13,6 +13,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+    "Development Status :: 3 - Alpha",
 ]
 dependencies = [
     "paho-mqtt"
