--- a/indralib/pyproject.toml
+++ b/indralib/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "indralib"
-version = "0.0.5"
+version = "0.0.6"
 authors = [{ name = "Dominik Schlösser", email = "dominik.schloesser@gmail.com" }]
 description = "Client for the Indrajala system"
 readme = "README.md"
@@ -14,6 +14,9 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Development Status :: 3 - Alpha",
+]
+dependencies = [
+    "websockets >=12.0",
 ]
 
 [project.urls]
