--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -60,7 +60,7 @@ tls = true
 private_key = "{{data_directory}}/certs/my-key.pem"
 public_key = "{{data_directory}}/certs/my-cert.pem"
 web_root = "{{data_directory}}/web"
-static_apps = [["/admin", "{{data_directory}}/web/admin"]]
+static_apps = [["/admin", "{{data_directory}}/web/admin"], ["/chat", "{{data_directory}}/web/chat"]]
 
 [[indra_dispatch]]
 active = true
@@ -70,7 +70,7 @@ subscriptions = []
 annotate = ["sentiment"]
 
 [[indra_ai]]
-active = true
+active = false
 name = "indra_ai.1"
 loglevel = "debug"
 subscriptions = []
@@ -80,7 +80,7 @@ model = "distilbert-base-uncased-finetuned-sst-2-english"
 revision = "af0f99b"
 
 [[indra_ai]]
-active = true
+active = false
 name = "indra_ai.2"
 loglevel = "debug"
 subscriptions = []
@@ -88,6 +88,16 @@ application = "translation"
 engine = "huggingface/accelerate/sentencepiece"
 # model = "Helsinki-NLP/opus-mt-en-de"
 model = "jbochi/madlad400-3b-mt"
+
+[[indra_ai]]
+active = true
+name = "indra_ai.3"
+loglevel = "debug"
+subscriptions = []
+application = "chat"
+engine = "huggingface/pipeline/conversational"
+# model = "meta-llama/Meta-Llama-3-8B-Instruct"
+model = "meta-llama/Meta-Llama-3-8B"
 
 [[zero_test]]
 active = true
