--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -111,11 +111,12 @@ subscriptions = ["zero_test/#"]
 # Max for M2 cpu is around 5000 Hz message input via ZMQ
 ping_frequency_hz = 1
 
-[[indra_ticker_muc_weather]]
-    active = true
-    name = "ticker_muc_weather.1"
+[[indra_ticker_weather_muc]]
+    active = false
+    name = "ticker_weather_muc.1"
     # zeromq_port = 8092
     # zeromq_host = "localhost"
     # zeromq_executable = "some path to module"
+    subscriptions = []
     loglevel = "debug"
     period_sec = 3600
