--- a/config/indrajala.default.toml
+++ b/config/indrajala.default.toml
@@ -169,4 +169,4 @@
     subscriptions = []
     loglevel = "debug"
     run_condition = "hourly@:10"
-    station_id = "check: https://www.dwd.de/DE/leistungen/klimadatendeutschland/statliste/statlex_html.html?view=nasPublication&nn=16102"
+    stationskennung = "check: https://www.dwd.de/DE/leistungen/klimadatendeutschland/statliste/statlex_html.html?view=nasPublication&nn=16102"
