--- a/data_sources/geodata/11000yearsunspotnumber.toml
+++ b/data_sources/geodata/11000yearsunspotnumber.toml
@@ -12,8 +12,8 @@ publication_date = "2004-10-28"
 last_update = "2005-02"
 publisher = "Environmental Research Letters, 11, 2, 024001"
 id = "https://doi.org/10.25921/y6td-ne29"
-indra_id = "solanki2004"
-indra_domain = "$event/geodata/paleo/{indra_id}/sunspots"
+# indra_id = "solanki2004"
+# indra_domain = "$event/geodata/paleo/{indra_id}/sunspots"
 version = ""
 data_source = "https://www.ncei.noaa.gov/pub/data/paleo/climate_forcing/solar_variability/solanki2004-ssn.txt"
 related_publications = [
@@ -23,6 +23,9 @@ tags = ['sunspots']
 
 [datasets]
 sunspots11000yrs = [
+    "meta['domain'] = '$event/geodata/paleo/solanki2004/sunspots'",
+    "meta['from_id'] = 'solanki2004'",
+    "meta['data_type'] = 'number/int'",
     "decode('latin1')",
     "extract_lines(70)",
     "pandas_csv_separator(' ')",
